--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -1,8 +1,25 @@
 .quotes{
-  border: 1px solid grey;
+  border: 1px solid lightgray;
   border-radius: 50%;
-  padding: 45px;
+  padding: 41px;
   margin: 25px;
-  width: 25%;
-  background-color: lightgray;
+  width: 19%;
+  background-color: rgb(240, 240, 240);
+  float: left;
+  text-align: center;
+}
+#main{
+  max-width: 960px;
+  margin: auto;
+  color: rgb(20, 20, 20)
+}
+#why{
+  clear: left;
+}
+h2{
+  color:darkblue;
+}
+.subTitle{
+  font-size: small;
+  color: rgb(66, 66, 66)
 }
