--- a/src/pages/index.scss
+++ b/src/pages/index.scss
@@ -11,7 +11,8 @@
 #main{
   max-width: 960px;
   margin: auto;
-  color: rgb(20, 20, 20)
+  color: rgb(20, 20, 20);
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 #why{
   clear: left;
@@ -22,4 +23,7 @@ h2{
 .subTitle{
   font-size: small;
   color: rgb(66, 66, 66)
+}
+a{
+  color:darkblue;
 }
